crates/keron-lang/tests/corpus/errors/check/secret_map_key.keron
val token: Secret = secret("op://vault/item/field")

val cache: Map<Secret, String> = {token: "cached"}
